# coding-agent

./: AGENTS.md  AUTOMATION.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bug-fixes.md  phase-automation.sh  ralph.sh  test_analysis_phase1.md  test_analysis_phase2.md  test_analysis_phase3.md  test_analysis_phase4.md  test_context_bar.rs
crates/coding-agent-cli/: Cargo.toml  UNINTEGRATED_FEATURES.md
crates/coding-agent-cli/benches/: performance.rs
crates/coding-agent-cli/specs/: existing-spec.md  test-spec.md
crates/coding-agent-cli/src/: lib.rs  main.rs
crates/coding-agent-cli/src/agents/: fix_agent.rs  manager.rs  mod.rs  status.rs
crates/coding-agent-cli/src/cli/: input.rs  mod.rs  modes.rs  repl.rs  startup.rs  terminal.rs
crates/coding-agent-cli/src/config/: mod.rs  settings.rs
crates/coding-agent-cli/src/integrations/: git.rs  mod.rs  obsidian.rs  specstory.rs
crates/coding-agent-cli/src/permissions/: checker.rs  mod.rs  prompt.rs  trusted.rs
crates/coding-agent-cli/src/tokens/: cost_tracker.rs  counter.rs  mod.rs  pricing.rs
crates/coding-agent-cli/src/tools/: auto_fix.rs  definitions.rs  definitions.rs.backup2  diagnostics.rs  executor.rs  mod.rs  regression_tests.rs
crates/coding-agent-cli/src/ui/: commit_preview.rs  components.rs  context_bar.rs  file_picker.rs  fun_facts.rs  long_wait.rs  markdown.rs  mod.rs  output.rs  progress.rs  spinner.rs  status_bar.rs  syntax.rs  theme.rs  thinking.rs  tool_result.rs  tool_spinner.rs
crates/coding-agent-cli/tests/: e2e_tests.rs  fun_fact_display_test.rs  integration_tests.rs  planning_mode_test.rs  test_tool_iterations.rs  ui_visual_regression_tests.rs  ui_visual_regression_tests.rs.backup
crates/coding-agent-cli/tests/e2e/: api_tests.rs  harness.rs  mock_claude.rs  mod.rs  pty_helpers.rs  pty_tests.rs  snapshot_tests.rs  workflow_tests.rs
crates/coding-agent-cli/tests/integration/: agent_integration_test.rs  agent_test.rs  auto_fix_workflow_test.rs  error_handling_test.rs  mod.rs  multi_agent_coordination_test.rs  permission_error_test.rs  permission_prompt_workflow_test.rs  resource_error_test.rs  terminal_test.rs  tool_execution_retry_test.rs  workflow_test.rs
crates/coding-agent-cli/tests/snapshots/: ui_visual_regression_tests__complete_tool_execution_sequence.snap  ui_visual_regression_tests__empty_content_handling.snap  ui_visual_regression_tests__error_display_flow.snap  ui_visual_regression_tests__message_box_commit_style.snap  ui_visual_regression_tests__message_box_error.snap  ui_visual_regression_tests__message_box_multi_line.snap  ui_visual_regression_tests__message_box_simple.snap  ui_visual_regression_tests__message_box_wide_content.snap  ui_visual_regression_tests__message_box_with_title.snap  ui_visual_regression_tests__multiple_file_operations.snap  ui_visual_regression_tests__progress_bar_context_style.snap  ui_visual_regression_tests__progress_bar_increment.snap  ui_visual_regression_tests__progress_bar_percentages.snap  ui_visual_regression_tests__special_characters_display.snap  ui_visual_regression_tests__spinner_default_first_message.snap  ui_visual_regression_tests__spinner_empty_messages.snap  ui_visual_regression_tests__spinner_message_cycle.snap  ui_visual_regression_tests__spinner_static_message.snap  (+13 more)
crates/coding-agent-core/: Cargo.toml
crates/coding-agent-core/examples/: bash.rs  chat.rs  code_search.rs  edit.rs  list_files.rs  read.rs  test_gemini_image.rs
crates/coding-agent-core/src/: lib.rs  machine.rs  state.rs  types.rs
docs/: AUTOMATION.md  (+2 more)
(+69 files in other folders)
