[workspace]
members = [
    "crates/coding-agent-core",
    "crates/coding-agent-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/charliposner/coding-agent"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI dependencies
crossterm = "0.28"
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
indicatif = "0.17"
console = "0.15"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Shared dependencies
thiserror = "2.0"

# Token counting
tiktoken-rs = "0.9"

# File system utilities
glob = "0.3"

# TOML editing for auto-fix
toml_edit = "0.22"

# Git integration
git2 = "0.19"

# HTTP client for fun facts API
reqwest = { version = "0.12", features = ["json", "blocking"] }
