[package]
name = "coding-agent-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "coding_agent_cli"
path = "src/lib.rs"

[[bin]]
name = "code"
path = "src/main.rs"

[dependencies]
coding-agent-core = { path = "../coding-agent-core" }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
syntect = { workspace = true }
tiktoken-rs = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
