[package]
name = "coding-agent-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "coding_agent_cli"
path = "src/lib.rs"

[[bin]]
name = "code"
path = "src/main.rs"

[dependencies]
coding-agent-core = { path = "../coding-agent-core" }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
syntect = { workspace = true }
tiktoken-rs = { workspace = true }
glob = { workspace = true }
ureq = { version = "2.9", features = ["json"] }
dotenvy = "0.15"
schemars = "0.8"
walkdir = "2.4"
git2 = { workspace = true }

reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
expectrl = "0.7"           # PTY-based interactive testing
insta = "1.34"             # Snapshot testing
term-transcript = "0.3"    # Terminal output capture with ANSI
assert_cmd = "2.0"         # CLI subprocess testing
predicates = "3.0"         # Output assertions
wiremock = "0.5"           # Mock HTTP server for API
tokio-test = "0.4"         # Async test utilities
regex = "1.10"             # For ANSI stripping in tests
