[package]
name = "coding-agent-core"
version.workspace = true
edition.workspace = true

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
walkdir = "2.4"
dotenvy = "0.15"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
